--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -8,3 +8,12 @@ dubbo.scan.base-packages=com.springcloudalibaba.provider
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
 dubbo.registry.address=spring-cloud://localhost
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#mybatis
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.springcloudalibaba.provider.model
