--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -63,6 +63,12 @@
             <version>2.1.1</version>
         </dependency>
 
+<!--        redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
