--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.springcloudalibaba.provider.model
+
+spring.redis.host=127.0.0.1
